@@ -1,10 +1,0 @@
-[Gedit Plugin]
-Loader=python
-Module=zeitgeist_plugin
-IAge=2
-Name=Zeitgeist
-Description=Inform Zeitgeist about your activity
-Authors=Seif Lotfy <seif@lotfy.com>
-Copyright=Copyright © 2009 Seif Lotfy <seif@lotfy.com>
-Website=http://www.geekyogre.com
-
